# Nastrond

./: .gitignore  CMakeLists.txt  SFGE.py
courses/: course_bezier_curve.cpp  course_data.cpp  course_ecs.cpp  course_multithread.cpp  course_planetes.cpp
data/: config.json
data/animSaves/: cowboy_walk.json
data/behavior_tree/: CompleteBehaviorTree.asset  copy.asset  random_path.asset  single_loop.asset  test.asset
data/behaviour_tree/: random_path.asset
data/scenes/: saved_scene.scene  scene_many_entities.scene  test.scene  test_contact.scene  test_physics.scene  test_switch.scene  test_ui.scene
data/scenes/test_charge/: test_charge_1024.scene  test_charge_128.scene  test_charge_16.scene  test_charge_16384.scene  test_charge_2048.scene  test_charge_256.scene  test_charge_32.scene  test_charge_4096.scene  test_charge_512.scene  test_charge_64.scene  test_charge_8192.scene
data/shaders/: ecs.frag  ecs.vert
data/tilemap/: nastrond_buildingTiles.asset  nastrond_tilemap.asset  nastrond_tiles.asset
extensions/include/extensions/: behavior_tree_nodes.h  behaviour_tree.h  behaviour_tree_core.h  behaviour_tree_nodes.h  building_constructor.h  building_manager.h  building_noentity_manager.h  building_utilities.h  dwarf_manager.h  dwarves_slots_manager.h  dwelling_manager.h  excavation_post_manager.h  forge_manager.h  gizmo_manager.h  mine_manager.h  mushroom_farm_manager.h  navigation_graph_manager.h  pirate_system.h  planet_system.h  production_building_manager.h  python_extensions.h  warehouse_manager.h
extensions/src/: behavior_tree_core.cpp  behavior_tree_nodes.cpp  behaviour_tree.cpp  behaviour_tree_core.cpp  behaviour_tree_nodes.cpp  building_constructor.cpp  building_manager.cpp  building_noentity_manager.cpp  dwarf_manager.cpp  dwarves_slots_manager.cpp  dwelling_manager.cpp  excavation_post_manager.cpp  forge_manager.cpp  gizmo_manager.cpp  mine_manager.cpp  mushroom_farm_manager.cpp  navigation_graph_manager.cpp  pirate_system.cpp  planet_system.cpp  production_building_manager.cpp  python_extensions.cpp  warehouse_manager.cpp
extensions/src/AI/: behavior_tree.cpp  (+7 more)
include/audio/: audio.h  music.h  sound.h
include/editor/: editor.h  editor_info.h  profiler.h  tools_manager.h
include/engine/: asset.h  component.h  config.h  editor.h  engine.h  entity.h  globals.h  module.h  modules.h  rect_transform.h  scene.h  system.h  systems_container.h  tile.h  tile_asset.h  tilemap.h  transform.h  transform2d.h  ui.h  vector.h
include/graphics/: animation2d.h  button.h  camera.h  gizmo2d.h  gizmo_manager.h  graphics.h  graphics2d.h  hashmap2d.h  image.h  quadtree.h  rect_transform.h  shape.h  shape2d.h  sprite.h  sprite2d.h  text.h  texture.h  tile.h  tile_asset.h  tilemap.h  ui_element.h
include/input/: input.h
include/physics/: body2d.h  collider.h  collider2d.h  physics.h  physics2d.h
include/python/: pycomponent.h  pysystem.h  python_engine.h
include/tools/: tools_pch.h
include/utility/: file_utility.h  json_utility.h  priority_queue.h  python_utility.h  singleton.h  time_utility.h
scripts/: SFGE.py  ai_path_behaviour.py  button_test.py  camera_manager.py  collider_test.py  component_test.py  contact_test.py  giver_component.py  mine_production_component.py  mine_production_system.py  pirate.py  pirate_bullet.py  pirate_manager.py  planet_component.py  planet_system.py  planet_system_cpp.py  play_sound.py  player_character_basic.py  sprite_test.py  switch_scene.py  switch_scene_system.py
scripts/tools/: generate_tool_bindings.py  license_generator.py  tool_generator.py
src/: main.cpp  main_editor.cpp
src/audio/: audio.cpp  music.cpp  sound.cpp
src/editor/: editor.cpp  editor_info.cpp  profiler.cpp  tools_manager.cpp
src/engine/: asset.cpp  component.cpp  config.cpp  editor.cpp  editor_info.cpp  engine.cpp  entity.cpp  module.cpp  rect_transform.cpp  scene.cpp  system.cpp  systems_container.cpp  tile.cpp  tile_asset.cpp  tilemap.cpp  transform.cpp  transform2d.cpp  ui.cpp  vector.cpp
src/graphics/: animation2d.cpp  button.cpp  camera.cpp  gizmo2d.cpp  gizmo_manager.cpp  graphics.cpp  graphics2d.cpp  hashmap2d.cpp  image.cpp  quadtree.cpp  rect_transform.cpp  shape.cpp  shape2d.cpp  sprite.cpp  sprite2d.cpp  text.cpp  texture.cpp  tile.cpp  tile_asset.cpp  tilemap.cpp  ui.cpp  ui_element.cpp
src/input/: input.cpp
src/physics/: body2d.cpp  collider.cpp  collider2d.cpp  physics.cpp  physics2d.cpp
src/python/: pycomponent.cpp  pysystem.cpp  python_engine.cpp  python_engine.cpp~RF12647f.TMP  python_engine.cpp~RF1bd02d.TMP  python_engine.cpp~RF1ead93.TMP  python_engine.cpp~RF272d2c.TMP  python_engine.cpp~RF290f89.TMP  python_engine.cpp~RF29fa46.TMP  python_engine.cpp~RF3bcb30.TMP  python_engine.cpp~RF41693e3.TMP  python_engine.cpp~RF41b3f81.TMP  python_engine.cpp~RF41bac16.TMP  python_engine.cpp~RF41bc981.TMP  python_engine.cpp~RF41bf091.TMP  python_engine.cpp~RF46372a9.TMP  python_engine.cpp~RF46b1ffe.TMP  python_engine.cpp~RF4b36342.TMP  python_engine.cpp~RF4c49721.TMP  python_engine.cpp~RF4f38440.TMP  python_engine.cpp~RF4f71576.TMP  python_engine.cpp~RF51eb40.TMP  python_engine.cpp~RF59bee15.TMP  python_engine.cpp~RF5a111c1.TMP  python_engine.cpp~RFfeaa5.TMP
src/tools/: tools_pch.cpp
src/utility/: file_utility.cpp  json_utility.cpp  log.cpp  python_utility.cpp  time_utility.cpp
tests/: course_data.cpp  course_ecs.cpp  test_SOA.cpp  test_animation.cpp  test_asset.cpp  test_audio.cpp  test_bezier_curve.cpp  test_building.cpp  test_charge.cpp  test_contact.cpp  test_ecs.cpp  test_editor.cpp  test_graphics2d.cpp  test_guizmos.cpp  test_main.cpp  test_memory_alloc.cpp  test_multithread.cpp  test_opengl.cpp  test_pathfinding.cpp  test_physics.cpp  test_pirate.cpp  test_planet.cpp  test_planetes.cpp  test_pycomponent.cpp  test_python.cpp  test_quadtree.cpp  test_scene.cpp  test_sfml_audio.cpp  test_shape.cpp  test_sound_buffer.cpp  test_sprite.cpp  test_switch_scene.cpp  test_system.cpp  test_texture.cpp  test_tilemap.cpp  test_ui.cpp
tools/AnimCreator/: README.md  main.cpp
tools/animCreator/: main.cpp
tools/anim_creator/: main.cpp
(+72 files in other folders)
